create shipping Screen and make the start screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Printers">
         <activity
             android:name=".ui.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.Shipping2"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
